spade-tests/src/snapshots/spade_tests__const_generics__generic_trait_bound_not_satisfied.snap
---
source: spade-tests/src/const_generics.rs
---
trait X<T> {}
impl X<uint<8>> for bool {}
fn test<T>(x: T)
    where T: X<bool>
{
    test(false)
}


error: Trait bound not satisfied. bool does not implement X<bool>
  ┌─ testinput:6:10
  │
4 │     where T: X<bool>
  │              - Required because of the trait bound specified here
5 │ {
6 │     test(false)
  │          ^^^^^ bool does not implement X<bool>
